--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,9 +3,10 @@
   "singleQuote": true,
   "printWidth": 80,
   "tabWidth": 2,
+  "useTabs": false,
   "bracketSameLine": true,
+  "bracketSpacing": true,
   "arrowParens": "always",
   "endOfLine": "lf",
   "singleAttributePerLine": true
 }
-
