--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -46,6 +48,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "typescript": "~5.1.3"
   }
 }
